--- a/backend-for-frontend/pom.xml
+++ b/backend-for-frontend/pom.xml
@@ -4,12 +4,8 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
 
-    <groupId>de.openknowledge.projects.architecture-concepts</groupId>
-    <artifactId>architecture-concepts</artifactId>
+    <groupId>de.openknowledge.projects.architecture-concepts.backend-for-frontend</groupId>
+    <artifactId>backend-for-frontend</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
-
-    <modules>
-        <module>backend-for-frontend</module>
-    </modules>
 </project>
