Add bff-basic module

--- a/backend-for-frontend/pom.xml
+++ b/backend-for-frontend/pom.xml
@@ -8,4 +8,8 @@
     <artifactId>backend-for-frontend</artifactId>
     <packaging>pom</packaging>
     <version>1.0-SNAPSHOT</version>
+
+    <modules>
+        <module>bff-basic</module>
+    </modules>
 </project>
