Add bff-basic-with-tenants-multiple-backend-services module

--- a/backend-for-frontend/pom.xml
+++ b/backend-for-frontend/pom.xml
@@ -12,5 +12,6 @@
     <modules>
         <module>bff-basic</module>
         <module>bff-basic-with-tenants</module>
+        <module>bff-basic-with-tenants-multiple-backend-services</module>
     </modules>
 </project>
