Example implementation for a BFF using the Interface API approach (shared kernel) with a single Implementation.

--- a/backend-for-frontend/pom.xml
+++ b/backend-for-frontend/pom.xml
@@ -13,5 +13,6 @@
         <module>bff-basic</module>
         <module>bff-basic-with-tenants</module>
         <module>bff-basic-with-tenants-multiple-backend-services</module>
+        <module>bff-basic-api</module>
     </modules>
 </project>
