Fixed packaging issues. Removed spotify-maven-plugin for bff1 and bff2

--- a/backend-for-frontend/bff-basic-api/pom.xml
+++ b/backend-for-frontend/bff-basic-api/pom.xml
@@ -5,6 +5,7 @@
 
     <artifactId>bff-basic-api</artifactId>
     <version>0</version>
+    <packaging>pom</packaging>
 
     <parent>
         <artifactId>backend-for-frontend</artifactId>
